--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
           
         <div>
-         <img src="MicrosoftTeams-image (3).png">
+         <img src="k.jpeg">
         </div>
 
         <div>
