--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section id="DP">
       <h3>This is a product which provides the birds with fruits, grains and water. Here is a Phamplet for better understanding.</h3>
-      <img src="la.jpeg" id="c">
+      <img src="toma (1).jpg" id="c">
     </section>
 
    
